# opentitan

./: WORKSPACE  com.py  digest.json  fi_verilator_sim.py  flop_parser.py  pyproject.toml  python-requirements.txt
hw/: BUILD
hw/dv/tools/dvsim/: z01x.hjson
hw/dv/verilator/simutil_verilator/cpp/: verilator_sim_ctrl.cc  verilator_sim_ctrl.h
hw/ip/hmac/rtl/: hmac.sv
hw/ip_templates/rv_core_ibex/lint/: rv_core_ibex.waiver.tpl
hw/ip_templates/rv_core_ibex/rtl/: rv_core_ibex.sv.tpl
hw/top_darjeeling/ip_autogen/rv_core_ibex/lint/: rv_core_ibex.waiver
hw/top_darjeeling/ip_autogen/rv_core_ibex/rtl/: rv_core_ibex.sv
hw/top_earlgrey/data/autogen/: top_earlgrey.gen.hjson
hw/top_earlgrey/dv/env/seq_lib/: chip_sw_rv_core_ibex_lockstep_glitch_vseq.sv
hw/top_earlgrey/ip_autogen/flash_ctrl/dv/: flash_ctrl_base_fi_sim_cfg.hjson  flash_ctrl_fi_sim.core  flash_ctrl_fi_sim_cfg.hjson
hw/top_earlgrey/ip_autogen/rv_core_ibex/rtl/: rv_core_ibex.sv
hw/top_earlgrey/rtl/autogen/: chip_earlgrey_cw310.sv  chip_earlgrey_cw340.sv  top_earlgrey.sv
hw/top_earlgrey/templates/: chiplevel.sv.tpl
hw/top_englishbreakfast/ip_autogen/rv_core_ibex/rtl/: rv_core_ibex.sv
rules/: autogen.bzl  files.bzl  hooks_setup.bzl  manifest.bzl  signing.bzl
rules/opentitan/: keyutils.bzl
sw/device/lib/crypto/impl/: aes.c  (+2 more)
sw/device/tests/: BUILD  pentest.c
sw/device/tests/crypto/: BUILD  aes_gcm_testutils.c
sw/device/tests/penetrationtests/: BUILD  pentest.bzl
sw/device/tests/penetrationtests/extensions/: WORKSPACE.bazel
util/: BUILD  cryptolib_info.py
util/dvsim/: SimCfg.py  Test.py
(+97 files in other folders)
