# Copyright lowRISC contributors (OpenTitan project).
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

workspace(name = "otsca_exts")

# This is a sample workspace to demonstrate how to write custom extensions. This bazel repository is not stand-alone project: it must
# be connected into the main OpenTitan repository by way of the
# `otsca_exts_setup` call in OpenTitan's WORKSPACE file.
